Introduce secrets to store controller information
This patch introduces kubernetes secrets and makes the necessary
changes in the go controller to read from it.

NOTE: If you are using the go controller standalone outside of
kubernetes cluster, then set the environment variables with
controller details.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,3 +18,19 @@ spec:
       - name: avi-controller
         image: avi_k8s_controller_go:latest
         imagePullPolicy: IfNotPresent
+        env:
+        - name: CTRL_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: avi-secret
+              key: username
+        - name: CTRL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: avi-secret
+              key: password
+        - name: CTRL_IPADDRESS
+          valueFrom:
+            secretKeyRef:
+              name: avi-secret
+              key: controller_ip
