Fix hard-coding of controller version
The controller version is now configurable via secrets

--- a/k8s_tmpl/deployment.yaml
+++ b/k8s_tmpl/deployment.yaml
@@ -34,3 +34,8 @@ spec:
             secretKeyRef:
               name: avi-secret
               key: controller_ip
+        - name: CTRL_VERSION
+          valueFrom:
+            secretKeyRef:
+              name: avi-secret
+              key: controller_version
