--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ matrix:
       - export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
       script:
       - make build
-      - make test
+      - go test -v ./pkg/istio/objects
